# python-renameat2

./: .gitignore  .readthedocs.yaml  .yamllint.yml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  renameat2.c  renameat2.py  renameat2_build.py  renameat2_cffi.py  renameat2_test.py  requirements-dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  build_wheels.yml  codeql-analysis.yml  lint.yml  suggestions.yml  test.yml
builder/: Dockerfile  docker-compose.yml
builder/manylinux/: Dockerfile  build-wheel.sh
docs/: README.md  conf.py  examples.md  index.md  index.rst  renameat2.rst  requirements.txt
manylinux/: Dockerfile  build-wheel.sh  docker-compose.yml
renameat2/: __init__.py
tests/: renameat2_test.py
