[metadata]
name = renameat2
version = 1.0.0
description = A wrapper around Linux's renameat2 system call
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan Webb
author_email = jordan@getseam.com
url = https://github.com/jordemort/python-renameat2
keywords = linux, rename, renameat2, atomic, swap, exchange, whiteout
license = MIT
license_file = LICENSE

[options]
packages = renameat2
python_requires = >= 3.6
setup_requires = cffi >= 1.0.0
install_requires = cffi >= 1.0.0
tests_require = pytest
