[metadata]
name = renameat2
description = A wrapper around Linux's renameat2 system call
long_description = file: README.md
long_description_content_type = text/markdown
author = Jordan Webb
author_email = jordan@getseam.com
url = https://github.com/jordemort/python-renameat2
keywords = linux, rename, renameat2, overlayfs, atomic, swap, exchange, whiteout
license = MIT
license_file = LICENSE
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Operating System :: POSIX :: Linux
  Topic :: Software Development :: Libraries
  Topic :: System :: Filesystems
project_urls =
  Documentation = https://python-renameat2.readthedocs.io/
  Bug Tracker = https://github.com/jordemort/python-renameat2/issues
  Source Code = https://github.com/jordemort/python-renameat2

[options]
packages = renameat2
python_requires = >= 3.6
setup_requires =
  cffi >= 1.0.0
  setuptools_scm
install_requires = cffi >= 1.0.0
tests_require = pytest

[build_sphinx]
project = python-renameat2
source-dir = docs

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tox:tox]
envlist = py37, py38, py39, py310, py311

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
changedir = {envtmpdir}
deps = -r requirements-dev.txt
commands = pytest -v {toxinidir}/tests
